  deleted before the overlay can show.
- Fixed a bug that prevented projects from being saved, when a rename was requested
  but the folder failed to rename.
- Fixed a crash when loading scene nodes which are not linked to a scene because of
  faulty project configuration.
- Fixed a few bugs with updating the script list and the ui for the selected scripts.
- Fixed QML binding loop for buttons.

New Features:
- Added the possibility to configure the Layout of the Player for the project as a whole.
- Created an Auto-Updater for Windows.
- Added the ability to configure the predominantly used hand. This is taken into 
  account in the default Player Layouts.
- Added a new in-built Layout that wastes less screen real estate.
- Added the possibility to connect to sex toys and issue commands to sex toys in a tease.
  - Added a Buttplug.io device client to connect to toys via Initface.
- Added an event communication mechanism to the script interface via the PlayerEventCommunicator.
  This lets a Script communicate and exchange data with the Layout.
- The PlayerThread can now spawn and kill threads with the "runAsynch" and "kill" methods
  respectively.
- Added the possibility to create and play instruction sequences. These are played in parallel
  to the script and run instructions based on an internal timeline. They are stored in a new 
  type of Resource: Sequences.
- Resource tags can have custom types. To set a tag type, separate the tag name with ":".
  Everything to the left of the first ":" will be interpreted as the tag's type.

Changes:
- Changed debug-view to a layout with splitter to support resizing the debugger.
- Updated the Script Editor with a lot of new features:
  - Better code folding.
  - Color coded matching of braces, brackets and paratheses.
  - Highlighting of selected word.
  - Toolbar at the bottom.
  - Better input completion.
- Scenes now allow to select an existing Script Resource instead of having to create
  a new one.